Attempting jquery functionality

--- a/index.html
+++ b/index.html
@@ -1,8 +1,9 @@
-<!doctype html> 
-<html lang="en"> 
-<head> 
+<!doctype html>
+<html lang="en">
+<head>
 	<meta charset="UTF-8" />
     <title>Learning Phaser</title>
+	<script src="jquery-3.2.1.min.js"></script>
 	<script type="text/javascript" src="js/phaser.min.js"></script>
     <style type="text/css">
         body {
@@ -16,7 +17,7 @@
 
 	var game = new Phaser.Game(1335, 750, Phaser.AUTO, 'Game 2', { create: create, update: update });
 
-	
+
 	function create() {
 
 		let style = {
@@ -36,7 +37,7 @@
 	}
 
 
-	
+
 
 </script>
 
