banging head against JSON parsing as hard as possible

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
 
 	<! link all the scripts >
 	<script src="jquery-3.2.1.min.js"></script>
+	<script type="text/javascript" src="js/examplestate.js"></script>
 	<script type="text/javascript" src="js/phaser.min.js"></script>
 	<script type="text/javascript" src="js/intro.js"></script>
 	<script type="text/javascript" src="js/gameplay.js"></script>
@@ -41,6 +42,7 @@
 		*/
 
 		game.state.add("Preload", preloadState);
+		game.state.add("Example", exampleState);
 		game.state.add("Gameplay", gameplayState);
 		game.state.add("Menu", menuState);
 		game.state.add("Chapter 1", chapterOneState);
