Swiping almost working

--- a/index.html
+++ b/index.html
@@ -20,7 +20,14 @@
         }
     </style>
 </head>
+
 <body>
+
+
+	
+	<div id="swipezone">
+		Swipe me
+	</div>
 
 <script type="text/javascript">
 
