--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 	<script type="text/javascript" src="js/preload.js"></script>
 	<script type="text/javascript" src="js/menu.js"></script>
 	<script type="text/javascript" src="js/scoreScreen.js"></script>
+	<script type="text/javascript" src="js/end.js"></script>
 
     <style type="text/css">
         body {
@@ -30,6 +31,7 @@
 		game.state.add("Gameplay", gameplayState);
 		game.state.add("Intro", introState);
 		game.state.add("Score", scoreState);
+		game.state.add("End", endState);
 
 		game.state.start("Preload");
 	}
